Fix visible scrollbars if hardware mouse detected
resolves #1

--- a/assets/components/_global.scss
+++ b/assets/components/_global.scss
@@ -38,7 +38,7 @@ code {
   width: 100%;
   display: block;
   font-family: 'Courier New';
-  overflow: scroll;
+  overflow: hidden;
   white-space: pre-line;
 }
 
